fixed profile text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1706,7 +1706,7 @@ img.addable-item__delete {
   .Header img {
     width: 100px;
     display: inline;
-    margin-right: 60px;
+    margin-right: 30px;
   }
   .nav__today-link {
     background-color: #08ae23;
